Fixed the items being off center

--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed:300');
+
+* {
+    -webkit-margin-before: 0em;
+    -webkit-margin-after: 0em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+}
+
 #wrapper {
     font-family: 'Open Sans', sans-serif;
     display: grid;
@@ -59,6 +67,7 @@ body {
     ". sub sub ."
     ". btn-about btn-register .";
     color: #aaa;
+    justify-content: center;
 }
 
 #call-to-action #btn-about {
